--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
-    "i18n-ally.localesPaths": [
-        "src/i18n"
-    ],
-    "i18n-ally.keystyle": "nested",
-    "eslint.validate": [
-        "javascript",
-        "typescript",
-        "svelte",
-    ],
-    "typescript.preferences.importModuleSpecifier": "relative"
+  "i18n-ally.localesPaths": [
+    "src/i18n"
+  ],
+  "i18n-ally.keystyle": "nested",
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "svelte",
+    "json"
+  ],
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
