disable ts strict mode (issues with svelte)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "strict": true,
+    // "strict": true,
     "typeRoots": [
       "src/.d.ts"
     ]
