--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "tslib": "^2.2.0",
     "typescript": "^4.4.3",
     "vite": "^2.5.4"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^3.2.0"
   }
 }
