--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "type:check": "svelte-check --tsconfig ./tsconfig.json",
+    "type:check:watch": "svelte-check --watch --tsconfig ./tsconfig.json",
     "dev": "vite",
     "format": "eslint --cache --fix .",
     "serve": "vite preview"
@@ -26,7 +27,7 @@
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.43.1",
-    "svelte-check": "^2.1.0",
+    "svelte-check": "^3.1.4",
     "svelte-eslint-parser": "^0.9.0",
     "svelte-i18n": "^3.3.12",
     "svelte-preprocess": "^4.7.2",
